--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,15 +1,18 @@
 {% extends 'base.html' %}
 {% block title %} Последние обновления на сайте {% endblock %}
 {% block content %}
+{% load cache %}
   <div class="container py-5">
     <h1> Все посты </h1>
-    {% include 'posts/includes/switcher.html' %}
-    {% for post in page_obj %}
-      {% include 'posts/includes/post_card.html' %}
-      {% if not forloop.last %}
-        <hr>
-      {% endif %}
-    {% endfor %}
+    {% include 'posts/includes/switcher.html' with index=True %}
+    {% cache 20 index_page %}
+      {% for post in page_obj %}
+        {% include 'posts/includes/post_card.html' %}
+        {% if not forloop.last %}
+          <hr>
+        {% endif %}
+      {% endfor %}
+    {% endcache %}
     {% include 'posts/includes/paginator.html' %}
   </div>
 {% endblock %}
